# WAAM_fit

./: .gitignore  LICENSE  README.md  WAAM - Kopie.toml  WAAM.toml  WAAMEvaluator.py  main.py  polygonTester.py  pyproject.toml  requirements.txt  test_WAAMEvaluator.py  test_rust.py
.github/workflows/: rust-clippy.yml
examples/: Testobjekt_aehnlich_paper.stp  Wuerfel.step  benchmark_querschnitt.stp  benchmark_radien.stp  benchmark_wanddicke.stp  benchmark_winkel.stp  pipe.ipt  pipe.stp  steg_bauteil.stp  steg_bauteil_gemischt.step  steg_bauteil_optimiert.stp  u-profil.stp  u-profil_optimiert.stp  wanne_mit_halbkreis_aussparung.stp
examples/benchmark/: N  benchmark.py  cnts
rust/: Cargo.toml
rust-methods/: Cargo.toml
rust-methods/src/: lib.rs  linear_algebra.rs  shrinking_ball.rs
rust-methods/src/brep_octree/: brep_element.rs
rust/src/: lib.rs  linear_algebra.rs  shrinking_ball.rs
src/waam_fit/: WAAM.toml  WAAMEvaluator.py  config.py  evaluate.py  main.py  visualize.py
