[package]
name = "rust-methods"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_methods"
crate-type = ["cdylib"]

[dependencies]
kdtree = "0.7.0"
numpy = "0.19.0"
pyo3 = { version = "0.19.0", features = [
    "extension-module",
    "generate-import-lib",
] }

[features]
default = ["logmedials_"]
logmedials = []
